[project]
name = "energy-prices-thesis"
version = "0.1.0"
description = ""
authors = [
    {name = "kaique.moraees", email = "kaiquemoraesig@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "pandas>=2.2,<3",
    "jupyterlab>=4.5,<5",
    "scikit-learn>=1.4,<2",
    "kedro>=0.19,<0.20",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"